Fixed About section on mobile devices
Fixed About section on mobile devices, all other sections need to be addressed.

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -17,4 +17,7 @@
 #about_text{
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
+    @media (min-width: 480px) {
+        font-size:.6em;
+    }
 }
