--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -12,6 +12,13 @@
         width:100px;
         border-radius: 100px;
         margin: 10px;
+        @media (min-width: 480px) {
+            height: 70px;
+            width: 70px;
+            //margin: 8px;
+            margin-right: 10%;
+            padding-left: -1%;
+        }
     }
 }
 
